# haksellm

./: .gitignore  autograd.py  bag_of_words.py  byte_pair_encoding.py  count_based_language_model.py  embedding.py  jsonl_dataset.py  main.py  models.py  ngram_model.py  prepare.py  pyproject.toml  quadratic_loss.py  requirements.txt  rnn_model.py
data/: dummy.jsonl
text/: hooked_on_a_feeling.txt
