[project]
name = "haksellm"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["torch>=2.11.0", "torchvision>=0.26.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu132" }]
torchvision = [{ index = "pytorch-cu132" }]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
